1001-유승민-중간저장

--- a/jupyter/jupyter/google_trend.ipynb
+++ b/jupyter/jupyter/google_trend.ipynb
@@ -236,7 +236,7 @@
     "for j in range(i+1, len(axes)):\n",
     "    fig.delaxes(axes[j])\n",
     "\n",
-    "fig.suptitle(\"구글 트렌드 – 카테고리별 관심도 추이 (각각 스케일)\", fontsize=16)\n",
+    "fig.suptitle(\"구글 trend – 카테고리별 관심도 추이 (각각 스케일)\", fontsize=16)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -388,7 +388,7 @@
     "plt.imshow(data, aspect=\"auto\")\n",
     "plt.yticks(range(len(monthly.columns)), monthly.columns)\n",
     "plt.xticks(range(len(monthly.index)), [d.strftime(\"%Y-%m\") for d in monthly.index], rotation=45)\n",
-    "plt.title(\"구글 트렌드(뉴스) – 월 평균 관심도 히트맵(정렬 스케일)\")\n",
+    "plt.title(\"구글 trend(뉴스) – 월 평균 관심도 히트맵(정렬 스케일)\")\n",
     "plt.colorbar()\n",
     "plt.tight_layout()\n",
     "plt.show()"
