--- a/jupyter/jupyter/X.ipynb
+++ b/jupyter/jupyter/X.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "b42c4f18-63aa-4380-892e-52d260bf71a5",
    "metadata": {},
    "outputs": [
@@ -111,12 +111,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⏱️  Now(UTC): 2025-10-14 11:02:18\n",
-      "⏱️  Now(KST): 2025-10-14 20:02:18\n",
+      "⏱️  Now(UTC): 2025-10-14 11:18:56\n",
+      "⏱️  Now(KST): 2025-10-14 20:18:56\n",
       "📅  Window(UTC): 2025-10-11 11:01:08 → 2025-10-14 11:01:08\n",
       "⚙️  Limits: MAX_TWEETS_TOTAL=200, PAGE_SIZE=50, PAGE_SLEEP_SEC=1.0\n",
-      "⚠️ 429 TooManyRequests (probe)\n",
-      "  reset(UTC): 2025-10-14 11:13:53 | reset(KST): 2025-10-14 20:13:53\n"
+      "✅ Probe OK — got 10 tweets in this window\n",
+      "  sample: 경제 뉴스 제공 thông tin về tình hình tăng trưởng, التضخم والاستثمار والتجارة.\n"
      ]
     }
    ],
