--- a/jupyter/jupyter/내부지표(뉴스)비교.ipynb
+++ b/jupyter/jupyter/내부지표(뉴스)비교.ipynb
@@ -18,26 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "65a970ec-7498-42ab-bad4-e19972d383f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MongoDB 연결\n",
-    "client = MongoClient(\"mongodb+srv://Dgict_TeamB:team1234@cluster0.5d0uual.mongodb.net/\")\n",
-    "db = client[\"test123\"]   # DB 이름\n",
-    "collection = db[\"shared_articles\"]  # 컬렉션 이름\n",
-    "\n",
-    "# 데이터 불러오기\n",
-    "docs = list(collection.find({}))\n",
-    "df = pd.DataFrame(docs)\n",
-    "\n",
-    "# published_at을 datetime 형식으로 변환\n",
-    "df[\"published_at\"] = pd.to_datetime(df[\"published_at\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "8941d850-71e3-4d3d-91ff-f60924021b60",
    "metadata": {},
@@ -221,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
