--- a/jupyter/jupyter/외부지표 비교.ipynb
+++ b/jupyter/jupyter/외부지표 비교.ipynb
@@ -21,98 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5ad2e6d0-4fdc-4cdd-a7a4-c8bd22bd40a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>news_count</th>\n",
-       "      <th>sentiment_avg</th>\n",
-       "      <th>keyword_diversity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-10</td>\n",
-       "      <td>884</td>\n",
-       "      <td>0.576923</td>\n",
-       "      <td>106.535068</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     month  news_count  sentiment_avg  keyword_diversity\n",
-       "0  2025-10         884       0.576923         106.535068"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# ===============================\n",
-    "# 1. MongoDB 뉴스 데이터 불러오기\n",
-    "# ===============================\n",
-    "client = MongoClient(\"mongodb+srv://Dgict_TeamB:team1234@cluster0.5d0uual.mongodb.net/\")\n",
-    "db = client[\"test123\"]   # DB 이름\n",
-    "collection = db[\"shared_articles\"]  # 컬렉션 이름\n",
-    "\n",
-    "docs = list(collection.find({}))\n",
-    "df_news = pd.DataFrame(docs)\n",
-    "\n",
-    "# 날짜 변환\n",
-    "df_news[\"published_at\"] = pd.to_datetime(df_news[\"published_at\"])\n",
-    "df_news[\"date\"] = df_news[\"published_at\"].dt.date\n",
-    "df_news[\"month\"] = df_news[\"published_at\"].dt.to_period(\"M\")\n",
-    "\n",
-    "# ===============================\n",
-    "# 2. 내부지표 정의\n",
-    "# ===============================\n",
-    "# 내부지표는 최소 3개로 설정\n",
-    "# (1) 뉴스 수\n",
-    "# (2) 평균 감정 점수\n",
-    "# (3) 키워드 다양성 (기사당 평균 키워드 개수)\n",
-    "\n",
-    "df_news[\"keyword_count\"] = df_news[\"keywords\"].apply(lambda x: len(x) if isinstance(x, list) else 0)\n",
-    "\n",
-    "df_internal = df_news.groupby(\"month\").agg(\n",
-    "    news_count=(\"category\", \"count\"),             # 월별 기사 수\n",
-    "    sentiment_avg=(\"sentiment_score\", \"mean\"),    # 월별 평균 감정 점수\n",
-    "    keyword_diversity=(\"keyword_count\", \"mean\")   # 월별 기사당 평균 키워드 수\n",
-    ").reset_index()\n",
-    "\n",
-    "df_internal[\"month\"] = df_internal[\"month\"].astype(str)\n",
-    "\n",
-    "df_internal.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "201c972a-3d0a-44d5-b4d1-d5f9cdb11b87",
    "metadata": {},
@@ -130,9 +38,6 @@
     }
    ],
    "source": [
-    "ECOS_API_KEY = \"VIU3HJ9GYAQ9P9OMDTCV\"\n",
-    "ECOS_BASE = \"https://ecos.bok.or.kr/api\"\n",
-    "\n",
     "def ecos_get(url: str):\n",
     "    try:\n",
     "        r = requests.get(url, timeout=10)\n",
@@ -367,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
